--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "BROWSER=None react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch ./data/db.json --port 9000"
   },
   "eslintConfig": {
     "extends": [
